--- a/package.json
+++ b/package.json
@@ -10,8 +10,8 @@
     "e2e": "ng e2e",
     "start:dev": "ng serve --open -c dev",
     "start:prod": "ng serve --open -c production",
-    "deploy": "ng build --aot && firebase deploy --only hosting --project=ratoong-dev",
-    "deploy:prod": "ng build -c production && firebase deploy --only hosting --project=ratoong-333eb"
+    "deploy": "ng build --aot && firebase deploy --only hosting --project=final-exam-9302a",
+    "deploy:prod": "ng build -c production && firebase deploy --only hosting --project=final-exam-9302a"
   },
   "private": true,
   "dependencies": {
