--- a/package.json
+++ b/package.json
@@ -26,10 +26,10 @@
     "@angular/platform-browser-dynamic": "~10.0.6",
     "@angular/router": "~10.0.6",
     "@fortawesome/angular-fontawesome": "^0.7.0",
-    "@fortawesome/fontawesome-svg-core": "^1.2.28",
-    "@fortawesome/free-brands-svg-icons": "^5.13.0",
-    "@fortawesome/free-regular-svg-icons": "^5.13.0",
-    "@fortawesome/free-solid-svg-icons": "^5.13.0",
+    "@fortawesome/fontawesome-svg-core": "^1.2.32",
+    "@fortawesome/free-brands-svg-icons": "^5.15.1",
+    "@fortawesome/free-regular-svg-icons": "^5.15.1",
+    "@fortawesome/free-solid-svg-icons": "^5.15.1",
     "@ng-bootstrap/ng-bootstrap": "^7.0.0",
     "@ngxs/storage-plugin": "^3.6.2",
     "@ngxs/store": "^3.6.2",
@@ -40,6 +40,7 @@
     "firebase": "^7.17.1",
     "firebase-admin": "^9.3.0",
     "firebase-functions": "^3.11.0",
+    "font-awesome": "^4.7.0",
     "ng2-charts": "^2.3.3",
     "ngx-bootstrap": "^5.6.1",
     "ngx-cookieconsent": "^2.2.3",
